[package]
name = "ptit"
version = "0.1.0"
authors = [
    "DeflatedPickle"
]
edition = "2021"
repository = "https://github.com/DeflatedPickle/ptit"
license = "MIT"

[dependencies]
bytes = "1.1.0"
image = "0.24.2"
reqwest = { version = "0.11.10", features = ["blocking"] }
rgb2ansi256 = "0.1.1"
termsize = "0.1.6"
