[package]
name = "ptit"
version = "0.1.0"
authors = [
    "DeflatedPickle"
]
edition = "2021"
repository = "https://github.com/DeflatedPickle/ptit"
license = "MIT"
keywords = [
    "cli",
    "image",
]
categories = [
    "command-line-utilities"
]

[dependencies]
bytes = "1.1.0"
image = "0.24.2"
reqwest = { version = "0.11.10", features = ["blocking"] }
rgb2ansi256 = "0.1.1"
termsize = "0.1.6"
clap = { version = "3.1.18", features = ["derive"] }
clap_complete = "3.1.4"
clap_complete_fig = "3.1.5"
shellexpand = "2.1.0"
path-absolutize = "3.0.13"
